--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,16 +4,23 @@
     <string name="action_settings">Settings</string>
     <string name="text1">Card: %s</string>
     <string name="cardSlot">[%s] %s</string>
+    <string name="cardSlotCombine">[%s+%s] %s %s</string>
+    <string name="allCatAndCardCount">All Categories - %s Elements</string>
+    <string name="allCatAndSelNum">All Categories - %s/%s</string>
+    <string name="allCatAndPageNum">All Categories - Page %s/%s</string>
+    <string name="catAndCardCount">Category: %s - %s Elements</string>
+    <string name="catAndSelNum">Category: %s - %s/%s</string>
+    <string name="catAndPageNum">Category: %s - Page %s/%s</string>
+    <string name="fundamentalCount">Fundamentals - %s Elements</string>
     <string name="action_cardCount">Card Count: %d</string>
     <string name="action_useCategory">> %s</string>
     <string name="action_useAllCategories">Use All Categories</string>
-    <string name="cardSlotCombine">[%s+%s] %s %s</string>
     <string name="mode_classic">Classic</string>
-    <string name="mode_combine">Splice</string>
     <string name="mode_list">List</string>
+    <string name="mode_combine">Splice</string>
+    <string name="mode_chooseOne">Choose One</string>
     <string name="mode_fundamentals">Fundamentals</string>
     <string name="modes">Modes</string>
     <string name="mode">Mode</string>
     <string name="cardCountTip">There are %d cards in the currently selected category.</string>
-    <string name="mode_chooseOne">Choose One</string>
 </resources>
