--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,12 @@
 <resources>
     <string name="app_name">Game Elements</string>
     <string name="app_name_full">Card Archive: Game Elements</string>
+    <string name="title_activity_help">Help</string>
     <string name="action_settings">Settings</string>
     <string name="text1">Card: %s</string>
     <string name="cardSlot">[%s] %s</string>
-    <string name="cardSlotCombine">[%s+%s] %s %s</string>
+    <string name="cardSlotSplice">[%s+%s] %s %s</string>
+    <string name="cardSlotFundElem">[%s] (%s) %s</string>
     <string name="allCatAndCardCount">All Categories - %s Elements</string>
     <string name="allCatAndSelNum">All Categories - %s/%s</string>
     <string name="allCatAndPageNum">All Categories - Page %s/%s</string>
@@ -21,7 +23,13 @@
     <string name="mode_spliceAlt">Splice Alt</string>
     <string name="mode_chooseOne">Choose One</string>
     <string name="mode_fundamentals">Fundamentals</string>
+    <string name="mode_fundamentalElem">Fundamental + Element</string>
     <string name="modes">Modes</string>
     <string name="mode">Mode</string>
     <string name="cardCountTip">There are %d cards in the currently selected category.</string>
+    <string name="help_text">
+        "\nGame Elements was designed and developed by Lauri Kosonen."
+
+        <i>"\n\nExit the help screen with your device's back button."</i>
+    </string>
 </resources>
