--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name_full">Card Archive: Game Elements</string>
     <string name="title_activity_help">Help</string>
     <string name="action_settings">Settings</string>
-    <string name="text1">Card: %s</string>
+    <string name="action_autoUpdateResults">Auto-Update Results</string>
     <string name="cardSlot">[%s] %s</string>
     <string name="cardSlotSplice">[%s+%s] %s %s</string>
     <string name="cardSlotFundElem">[%s] (%s) %s</string>
