Changed category order

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,17 +33,17 @@
         "\n\n\nELEMENT COUNTS"
 
         "\n\n- Total: %s elements"
-        "\n\n- Group: %s elements"
-        "\n- World: %s elements"
-        "\n- Influence: %s elements"
+        "\n\n- World: %s elements"
         "\n- Character: %s elements"
-        "\n- Navigation: %s elements"
-        "\n- Thinking: %s elements"
-        "\n- Combat: %s elements"
+        "\n- Group: %s elements"
+        "\n- Influence: %s elements"
+        "\n- Interaction: %s elements"
         "\n- Abilities: %s elements"
+        "\n- Navigation: %s elements"
+        "\n- Combat: %s elements"
+        "\n- Thinking: %s elements"
         "\n- Items: %s elements"
         "\n- Goal: %s elements"
-        "\n- Interaction: %s elements"
         "\n- Audio &amp; Visuals: %s elements"
         "\n- Miscellaneous: %s elements"
         "\n\n- Fundamentals: %s"
