--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,10 @@
     <string name="title_activity_help">Help</string>
     <string name="action_settings">Settings</string>
     <string name="action_autoUpdateResults">Auto-Update Results</string>
-    <string name="cardSlot">[%s] %s</string>
-    <string name="cardSlotSplice">[%s+%s] %s %s</string>
-    <string name="cardSlotFundElem">[%s] (%s) %s</string>
+    <string name="cardSlotCategory">[%s]</string>
+    <string name="cardSlotSpliceCategory">[%s+%s]</string>
+    <string name="cardSlotSplice">%s %s</string>
+    <string name="cardSlotFundElem">(%s) %s</string>
     <string name="allCatAndCardCount">All Categories - %s Elements</string>
     <string name="allCatAndSelNum">All Categories - %s/%s</string>
     <string name="allCatAndPageNum">All Categories - Page %s/%s</string>
