--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,9 @@
     <string name="action_settings">Settings</string>
     <string name="action_clearCards">Clear Results</string>
     <string name="action_clearAllLocks">Clear All Locks</string>
+    <string name="action_keepResultCategories">Keep Result Categories</string>
     <string name="action_autoUpdateResults">Auto-Update Results</string>
+    <string name="action_showCategories">Show Category Tags</string>
     <string name="cardSlotCategory">[%s]</string>
     <string name="cardSlotSpliceCategory">[%s+%s]</string>
     <string name="cardSlotSplice">%s %s</string>
