--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
     <string name="app_name_full">Card Archive: Game Elements</string>
     <string name="title_activity_help">Help</string>
     <string name="action_settings">Settings</string>
-    <string name="action_clearCards">Clear Results</string>
-    <string name="action_clearAllLocks">Clear All Locks</string>
+    <string name="action_clearCards">Clear Unlocked Results</string>
+    <string name="action_clearLocks">Clear Locks</string>
     <string name="action_keepResultCategories">Keep Result Categories</string>
     <string name="action_autoUpdateResults">Auto-Update Results</string>
     <string name="action_showCategories">Show Category Tags</string>
