--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="action_clearCards">Clear Unlocked Elements</string>
     <string name="action_clearLocks">Clear Locks</string>
+    <string name="action_spliceBench">Enable Splice Bench</string>
     <string name="action_keepElementCategories">Keep Element Categories</string>
     <string name="action_autoUpdateSettingChanges">Auto-Update Setting Changes</string>
     <string name="action_showCategories">Show Category Tags</string>
