--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,13 +5,13 @@
     <string name="action_settings">Settings</string>
     <string name="action_clearCards">Clear</string>
     <string name="action_clearLocks">Clear Locks</string>
-    <string name="action_spliceBench">Enable Splice Bench</string>
+    <string name="action_mergeSlot">Enable Merge Slot</string>
     <string name="action_keepElementCategories">Keep Element Categories</string>
     <string name="action_autoUpdateSettingChanges">Auto-Update Setting Changes</string>
     <string name="action_showCategories">Show Category Tags</string>
     <string name="cardSlotCategory">[%s]</string>
-    <string name="cardSlotSpliceCategory">[%s+%s]</string>
-    <string name="cardSlotSplice">%s %s</string>
+    <string name="cardSlotMergeCategory">[%s+%s]</string>
+    <string name="cardSlotMerge">%s %s</string>
     <string name="cardSlotFundElem">(%s) %s</string>
     <string name="allCatAndCardCount">All Categories - %s Elements</string>
     <string name="allCatAndPageNum">All Categories - Page %s/%s</string>
@@ -23,8 +23,8 @@
     <string name="action_useAllCategories">Use All Categories</string>
     <string name="mode_classic">Classic</string>
     <string name="mode_list">List</string>
-    <string name="mode_splice">Splice</string>
-    <string name="mode_spliceAlt">Splice Alt</string>
+    <string name="mode_merge">Merge</string>
+    <string name="mode_mergeAlt">Merge Alt</string>
     <string name="mode_fundamentals">Fundamentals</string>
     <string name="mode_fundamentalElem">Fundamental + Element</string>
     <string name="modes">Modes</string>
@@ -32,11 +32,11 @@
     <string name="tip">Tip</string>
     <string name="listUnavailable_clearLocks">Clear locks to see list</string>
     <string name="listUnavailable_elemCountCap">Increase element count cap to see list</string>
-    <string name="spliceBenchTip_full">Swipe elements left or right to edit</string>
-    <string name="spliceBenchTip_left">Swipe elements left</string>
-    <string name="spliceBenchTip_right">or right to edit</string>
-    <string name="spliceSelected_leftSide">Splice left side: \"%s\"</string>
-    <string name="spliceSelected_rightSide">Splice right side: \"%s\"</string>
+    <string name="mergeSlotTip_full">Swipe elements left and right to merge them</string>
+    <string name="mergeSlotTip_left">Now try left! ...</string>
+    <string name="mergeSlotTip_right">... Now try right!</string>
+    <string name="mergeSelected_leftSide">Merge left side: \"%s\"</string>
+    <string name="mergeSelected_rightSide">Merge right side: \"%s\"</string>
     <string name="help_text">
         "\nGame Elements was designed and developed by Lauri Kosonen."
 
@@ -59,7 +59,7 @@
         "\n\n- Fundamentals: %s"
 
         "\n\n\nFEATURES"
-        "\n\n- Modes: Classic, List, Splice, Splice Alt, Choose One, Fundamentals,"
+        "\n\n- Modes: Classic, List, Merge, Merge Alt, Choose One, Fundamentals,"
         "Fundamentals+Element"
         "\n- Tap to lock an element. Works in all modes. Locked results will stay on screen."
         "\n- Tap again to change lock color. This can be used to separate results into two locked"
@@ -68,11 +68,12 @@
         "\n- Tap empty space to add an element"
         "\n- Hold to remove an element"
         "\n- Press the big blue button to replace all unlocked results and fill empty spaces"
-        "\n- In the two Splice modes, swipe left to copy that result's beginning to all results"
+        "\n- In the two Merge modes, swipe left to copy that result's beginning to all results"
         "\n- Similarly, swipe right to copy that result's end to all results"
         "\n- In the drop-down menu, you'll find mode selection, clearing all elements,"
-        "clearing locks, category selection, and more."
+        "clearing locks, category selection, and more"
         "\n- Element count can be changed to suit your needs"
+        "\n- Merge Slot can be used to merge elements anywhere"
 
         <i>"\n\n\n[Exit the help screen with your device's back button.]"</i>
     </string>
