--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_name_full">Card Archive: Game Elements</string>
     <string name="title_activity_help">Help</string>
     <string name="action_settings">Settings</string>
+    <string name="action_copyToClipboard">Copy to Clipboard</string>
     <string name="action_clearCards">Clear</string>
     <string name="action_clearLocks">Clear Locks</string>
     <string name="action_changeFundamentals">Change Fundamentals</string>
@@ -39,6 +40,7 @@
     <string name="mergeSlotTip_right">... Now try right!</string>
     <string name="mergeSelected_leftSide">Merge left side: \"%s\"</string>
     <string name="mergeSelected_rightSide">Merge right side: \"%s\"</string>
+    <string name="copiedToClipboard">Elements copied to clipboard</string>
     <string name="help_text">
         "\nGame Elements was designed and developed by Lauri Kosonen."
 
