Implemented context menu and improved moving cards down

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,21 @@
     <string name="action_clearCards">Clear</string>
     <string name="action_clearLocks">Clear Locks</string>
     <string name="action_sortCards">Sort</string>
-    <string name="action_changeFundamentals">Change Fundamentals</string>
+    <string name="action_createCopy">Create Copy</string>
+    <string name="action_change">Change</string>
+    <string name="action_remove">Remove</string>
+    <string name="action_disableMergeSlot">Disable Merge Slot</string>
+    <string name="action_lock">Lock</string>
+    <string name="action_unlock">Unlock</string>
+    <string name="action_moveToTop">Move to Top</string>
+    <string name="action_moveUp">Move Up</string>
+    <string name="action_moveDown">Move Down</string>
+    <string name="action_copyFundamental">Copy Fundamental: %s</string>
+    <string name="action_pasteFundamental">Paste Fundamental: %s</string>
+    <string name="action_copyFundamental_disabled">Copy fundamental</string>
+    <string name="action_pasteFundamental_disabled">Paste fundamental</string>
+    <string name="action_randomFundamental">Random Fundamental</string>
+    <string name="action_changeFundamentals">Randomize Fundamentals</string>
     <string name="action_mergeSlot">Enable Merge Slot</string>
     <string name="action_keepElementCategories">Keep Element Categories</string>
     <string name="action_autoUpdateSettingChanges">Auto-Update Setting Changes</string>
