--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">Game Elements</string>
-    <string name="app_name_full">Card Archive: Game Elements</string>
     <string name="title_activity_help">Help</string>
     <string name="action_settings">Settings</string>
     <string name="action_copyToClipboard">Copy to Clipboard</string>
@@ -8,6 +7,8 @@
     <string name="action_clearLocks">Clear Locks</string>
     <string name="action_sortCards">Sort</string>
     <string name="action_createCopy">Create Copy</string>
+    <string name="action_replace">Replace</string>
+    <string name="action_add">Add %d</string>
     <string name="action_change">Change</string>
     <string name="action_remove">Remove</string>
     <string name="action_undoMergeLeft">Undo Merge, Keep Left</string>
@@ -46,6 +47,7 @@
     <string name="mode_list">List</string>
     <string name="mode_merge">Merge</string>
     <string name="mode_fundamentals">Fundamentals</string>
+    <string name="generate">Generate</string>
     <string name="modes">Modes</string>
     <string name="mode">Mode</string>
     <string name="tip">Tip</string>
