--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="cardSlotCategory">[%s]</string>
     <string name="cardSlotMergeCategory">[%s+%s]</string>
     <string name="cardSlotMerge">%s %s</string>
+    <string name="cardSlotMergeAlt">%s %s %s</string>
     <string name="cardSlotFundamental">(%s)</string>
     <string name="allCatAndCardCount">All Categories - %s Elements</string>
     <string name="allCatAndPageNum">All Categories - Page %s/%s</string>
@@ -53,6 +54,8 @@
     <string name="tip">Tip</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
+    <string name="thing">thing</string>
+    <string name="things">things</string>
     <string name="listUnavailable_clearLocks">Clear locks to see list</string>
     <string name="mergeSlotTip_full">Swipe elements left and right to merge them</string>
     <string name="mergeSlotTip_left">Now try left! ...</string>
