--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,8 +58,8 @@
     <string name="things">things</string>
     <string name="listUnavailable_clearLocks">Clear locks to see list</string>
     <string name="mergeSlotTip_full">Swipe elements left and right to merge them</string>
-    <string name="mergeSlotTip_left">Now try left! ...</string>
-    <string name="mergeSlotTip_right">... Now try right!</string>
+    <string name="mergeSlotTip_left">Swipe elements /</string>
+    <string name="mergeSlotTip_right">/ swipe elements</string>
     <string name="mergeSelected_leftSide">Merge left side: \"%s\"</string>
     <string name="mergeSelected_rightSide">Merge right side: \"%s\"</string>
     <string name="copiedToClipboard">Elements copied to clipboard</string>
