--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,35 +2,35 @@
     <string name="app_name">Game Elements</string>
     <string name="title_activity_help">Help</string>
     <string name="action_settings">Settings</string>
-    <string name="action_copyToClipboard">Copy to Clipboard</string>
+    <string name="action_copyToClipboard">Copy to clipboard</string>
     <string name="action_clearCards">Clear</string>
-    <string name="action_clearLocks">Clear Locks</string>
+    <string name="action_clearLocks">Clear locks</string>
     <string name="action_sortCards">Sort</string>
-    <string name="action_createCopy">Create Copy</string>
+    <string name="action_createCopy">Create copy</string>
     <string name="action_replace">Replace</string>
     <string name="action_add">Add %d</string>
     <string name="action_change">Change</string>
     <string name="action_remove">Remove</string>
-    <string name="action_undoMergeLeft">Undo Merge, Keep Left</string>
-    <string name="action_undoMergeRight">Undo Merge, Keep Right</string>
-    <string name="action_disableMergeSlot">Disable Merge Slot</string>
+    <string name="action_breakMergeLeft">Break merge, keep left</string>
+    <string name="action_breakMergeRight">Break merge, keep right</string>
+    <string name="action_disableMergeSlot">Disable merge slot</string>
     <string name="action_lock">Lock</string>
     <string name="action_unlock">Unlock</string>
-    <string name="action_moveToTop">Move to Top</string>
-    <string name="action_moveUp">Move Up</string>
-    <string name="action_moveDown">Move Down</string>
+    <string name="action_moveToTop">Move to top</string>
+    <string name="action_moveUp">Move up</string>
+    <string name="action_moveDown">Move down</string>
     <string name="action_copyFundamental">Copy Fundamental: %s</string>
     <string name="action_pasteFundamental">Paste Fundamental: %s</string>
-    <string name="action_copyFundamental_disabled">Copy fundamental</string>
-    <string name="action_pasteFundamental_disabled">Paste fundamental</string>
+    <string name="action_copyFundamental_disabled">Copy Fundamental</string>
+    <string name="action_pasteFundamental_disabled">Paste Fundamental</string>
     <string name="action_randomFundamental">Random Fundamental</string>
     <string name="action_changeFundamentals">Randomize Fundamentals</string>
-    <string name="action_mergeSlot">Enable Merge Slot</string>
-    <string name="action_keepElementCategories">Keep Element Categories</string>
-    <string name="action_autoUpdateSettingChanges">Auto-Apply Cat. and Elem. Count</string>
-    <string name="action_autoSortWhenLocking">Auto-Sort When Locking</string>
+    <string name="action_mergeSlot">Enable merge slot</string>
+    <string name="action_keepElementCategories">Keep element categories</string>
+    <string name="action_autoUpdateSettingChanges">Auto-apply cat. and elem. count</string>
+    <string name="action_autoSortWhenLocking">Auto-sort when locking</string>
     <string name="action_addFundamentals">Add Fundamentals</string>
-    <string name="action_showCategories">Show Category Tags</string>
+    <string name="action_showCategories">Show category tags</string>
     <string name="cardSlotCategory">[%s]</string>
     <string name="cardSlotMergeCategory">[%s+%s]</string>
     <string name="cardSlotMerge">%s %s</string>
@@ -41,9 +41,9 @@
     <string name="catAndCardCount">Category: %s - %s Elements</string>
     <string name="catAndPageNum">Category: %s - Page %s/%s</string>
     <string name="fundamentalPageNum">Fundamentals - Page %s/%s</string>
-    <string name="action_cardCount">Element Count: %d</string>
+    <string name="action_cardCount">Element count: %d</string>
     <string name="action_useCategory">> [%s] %s</string>
-    <string name="action_useAllCategories">Use All Categories</string>
+    <string name="action_useAllCategories">Use all categories</string>
     <string name="mode_classic">Classic</string>
     <string name="mode_list">List</string>
     <string name="mode_merge">Merge</string>
@@ -75,7 +75,7 @@
         "\n- [Cha] Character: %s elements"
         "\n- [Grp] Group: %s elements"
         "\n- [Inf] Influence: %s elements"
-        "\n- [IAc] Interaction: %s elements"
+        "\n- [Iac] Interaction: %s elements"
         "\n- [Abi] Abilities: %s elements"
         "\n- [Nav] Navigation: %s elements"
         "\n- [Com] Combat: %s elements"
